@@ -1,15 +1,14 @@
 package com.comet.opik.infrastructure.ratelimit;
 
-import com.comet.opik.api.DatasetItem;
 import com.comet.opik.api.DatasetItemBatch;
 import com.comet.opik.api.ExperimentItem;
 import com.comet.opik.api.ExperimentItemsBatch;
-import com.comet.opik.api.FeedbackScoreBatch;
-import com.comet.opik.api.FeedbackScoreBatchItem;
 import com.comet.opik.api.Span;
 import com.comet.opik.api.SpanBatch;
+import com.comet.opik.api.SpanUpdate;
 import com.comet.opik.api.Trace;
 import com.comet.opik.api.TraceBatch;
+import com.comet.opik.api.TraceUpdate;
 import com.comet.opik.api.resources.utils.AuthTestUtils;
 import com.comet.opik.api.resources.utils.ClickHouseContainerUtils;
 import com.comet.opik.api.resources.utils.ClientSupportUtils;
@@ -17,18 +16,22 @@ import com.comet.opik.api.resources.utils.MigrationUtils;
 import com.comet.opik.api.resources.utils.MySQLContainerUtils;
 import com.comet.opik.api.resources.utils.RedisContainerUtils;
 import com.comet.opik.api.resources.utils.TestDropwizardAppExtensionUtils;
+import com.comet.opik.api.resources.utils.TestUtils;
 import com.comet.opik.api.resources.utils.WireMockUtils;
+import com.comet.opik.api.resources.utils.resources.DatasetResourceClient;
 import com.comet.opik.api.resources.utils.resources.SpanResourceClient;
 import com.comet.opik.api.resources.utils.resources.TraceResourceClient;
 import com.comet.opik.extensions.DropwizardAppExtensionProvider;
 import com.comet.opik.extensions.RegisterApp;
 import com.comet.opik.infrastructure.OpikConfiguration;
+import com.comet.opik.infrastructure.RateLimitConfig;
 import com.comet.opik.infrastructure.auth.RequestContext;
 import com.comet.opik.podam.PodamFactoryUtils;
 import com.redis.testcontainers.RedisContainer;
 import io.dropwizard.jersey.errors.ErrorMessage;
 import io.reactivex.rxjava3.internal.operators.single.SingleDelay;
 import io.swagger.v3.oas.annotations.parameters.RequestBody;
+import jakarta.validation.Valid;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.HttpMethod;
 import jakarta.ws.rs.POST;
@@ -41,7 +44,6 @@ import jakarta.ws.rs.core.HttpHeaders;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import org.apache.hc.core5.http.HttpStatus;
-import org.jdbi.v3.core.Jdbi;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
@@ -52,8 +54,9 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.testcontainers.clickhouse.ClickHouseContainer;
-import org.testcontainers.containers.MySQLContainer;
+import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.lifecycle.Startables;
+import org.testcontainers.mysql.MySQLContainer;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import ru.vyarus.dropwizard.guice.test.ClientSupport;
@@ -70,16 +73,17 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
+import static com.comet.opik.api.FeedbackScoreBatchContainer.FeedbackScoreBatch;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
 import static com.comet.opik.api.Trace.TracePage;
 import static com.comet.opik.api.resources.utils.ClickHouseContainerUtils.DATABASE_NAME;
-import static com.comet.opik.api.resources.utils.MigrationUtils.CLICKHOUSE_CHANGELOG_FILE;
+import static com.comet.opik.api.resources.utils.RandomTestUtils.randomIp;
 import static com.comet.opik.api.resources.utils.TestDropwizardAppExtensionUtils.AppContextConfig;
 import static com.comet.opik.infrastructure.RateLimitConfig.LimitConfig;
 import static com.comet.opik.infrastructure.auth.RequestContext.WORKSPACE_HEADER;
 import static java.util.stream.Collectors.counting;
 import static java.util.stream.Collectors.groupingBy;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @DisplayName("Rate limit Resource Test")
@@ -89,14 +93,19 @@ class RateLimitE2ETest {
     private static final String BASE_RESOURCE_URI = "%s/v1/private/traces";
     private static final String CUSTOM_LIMIT = "customLimit";
     private static final String GET_SPAN_ID_LIMIT = "getSpanById";
+    private static final String SINGLE_TRACING_OPS_LIMIT = RateLimited.SINGLE_TRACING_OPS;
     private static final long LIMIT = 4L;
     private static final long WORKSPACE_LIMIT = 6L;
     private static final long LIMIT_DURATION_IN_SECONDS = 1L;
+    private static final long SINGLE_TRACING_OPS_LIMIT_VALUE = 3L;
+    private static final long SINGLE_TRACING_OPS_DURATION_IN_SECONDS = 1L;
+    private static final String IP_RATED_LIMIT_BUCKET_NAME = "ipRated";
     public static final String TOO_MANY_REQUESTS_MESSAGEE = "Too Many Requests: %s";
 
     private final RedisContainer REDIS = RedisContainerUtils.newRedisContainer();
-    private final MySQLContainer<?> MYSQL = MySQLContainerUtils.newMySQLContainer();
-    private final ClickHouseContainer CLICKHOUSE = ClickHouseContainerUtils.newClickHouseContainer();
+    private final MySQLContainer MYSQL = MySQLContainerUtils.newMySQLContainer();
+    private final GenericContainer<?> ZOOKEEPER_CONTAINER = ClickHouseContainerUtils.newZookeeperContainer();
+    private final ClickHouseContainer CLICKHOUSE = ClickHouseContainerUtils.newClickHouseContainer(ZOOKEEPER_CONTAINER);
     private final WireMockUtils.WireMockRuntime wireMock;
 
     @RegisterApp
@@ -104,6 +113,8 @@ class RateLimitE2ETest {
 
     private LimitConfig customLimit;
     private LimitConfig getSpanIdLimit;
+    private LimitConfig singleTracingOpsLimit;
+    private LimitConfig ipRatedLimit;
 
     private final PodamFactory factory = PodamFactoryUtils.newPodamFactory();
 
@@ -122,17 +133,41 @@ class RateLimitE2ETest {
         }
     }
 
+    // Unauthenticated, per-source-IP throttled endpoint
+    @Path("/v1/public/ip-rated")
+    @Produces(MediaType.APPLICATION_JSON)
+    @Consumes(MediaType.APPLICATION_JSON)
+    public static class ClientIpRatedBean {
+
+        @POST
+        @RateLimited(value = IP_RATED_LIMIT_BUCKET_NAME
+                + ":{clientIp}", shouldAffectWorkspaceLimit = false, shouldAffectUserGeneralLimit = false)
+        public Response test() {
+            return Response.status(Response.Status.CREATED).build();
+        }
+    }
+
     {
-        Startables.deepStart(MYSQL, CLICKHOUSE, REDIS).join();
+        Startables.deepStart(MYSQL, CLICKHOUSE, REDIS, ZOOKEEPER_CONTAINER).join();
 
         wireMock = WireMockUtils.startWireMock();
 
         var databaseAnalyticsFactory = ClickHouseContainerUtils.newDatabaseAnalyticsFactory(
                 CLICKHOUSE, DATABASE_NAME);
 
+        MigrationUtils.runMysqlDbMigration(MYSQL);
+        MigrationUtils.runClickhouseDbMigration(CLICKHOUSE);
+
         customLimit = new LimitConfig(CUSTOM_LIMIT, CUSTOM_LIMIT, 1, 1, "custom limit");
 
         getSpanIdLimit = new LimitConfig("Get-Span-Id", GET_SPAN_ID_LIMIT, 3, 1, "get span id");
+
+        singleTracingOpsLimit = new LimitConfig("Single-Tracing-Ops", SINGLE_TRACING_OPS_LIMIT,
+                SINGLE_TRACING_OPS_LIMIT_VALUE, SINGLE_TRACING_OPS_DURATION_IN_SECONDS,
+                "You have exceeded the rate limit for single tracing operations. Please try again later.");
+
+        ipRatedLimit = new LimitConfig("Ip-Rated", IP_RATED_LIMIT_BUCKET_NAME, 1, 60,
+                "You have exceeded the rate limit for ip. Please try again later.");
 
         APP = TestDropwizardAppExtensionUtils.newTestDropwizardAppExtension(
                 AppContextConfig.builder()
@@ -144,7 +179,9 @@ class RateLimitE2ETest {
                         .limit(LIMIT)
                         .workspaceLimit(WORKSPACE_LIMIT)
                         .limitDurationInSeconds(LIMIT_DURATION_IN_SECONDS)
-                        .customLimits(Map.of(CUSTOM_LIMIT, customLimit, GET_SPAN_ID_LIMIT, getSpanIdLimit))
+                        .customLimits(Map.of(CUSTOM_LIMIT, customLimit, GET_SPAN_ID_LIMIT, getSpanIdLimit,
+                                SINGLE_TRACING_OPS_LIMIT, singleTracingOpsLimit, ipRatedLimit.userFacingBucketName(),
+                                ipRatedLimit))
                         .build());
     }
 
@@ -154,16 +191,8 @@ class RateLimitE2ETest {
     private TraceResourceClient traceResourceClient;
 
     @BeforeAll
-    void setUpAll(ClientSupport client, Jdbi jdbi) throws Exception {
-
-        MigrationUtils.runDbMigration(jdbi, MySQLContainerUtils.migrationParameters());
-
-        try (var connection = CLICKHOUSE.createConnection("")) {
-            MigrationUtils.runClickhouseDbMigration(connection, CLICKHOUSE_CHANGELOG_FILE,
-                    ClickHouseContainerUtils.migrationParameters());
-        }
-
-        this.baseURI = "http://localhost:%d".formatted(client.getPort());
+    void setUpAll(ClientSupport client) {
+        this.baseURI = TestUtils.getBaseUrl(client);
         this.client = client;
 
         this.spanResourceClient = new SpanResourceClient(client, baseURI);
@@ -200,28 +229,18 @@ class RateLimitE2ETest {
 
         String projectName = UUID.randomUUID().toString();
 
-        Map<Integer, Long> responseMap = triggerCallsWithApiKey(LIMIT * 2, projectName, apiKey, workspaceName);
+        Map<Integer, Long> responseMap = triggerBatchCallsWithApiKey(LIMIT * 2, projectName, apiKey, workspaceName);
 
-        assertEquals(LIMIT, responseMap.get(HttpStatus.SC_TOO_MANY_REQUESTS));
-        assertEquals(LIMIT, responseMap.get(HttpStatus.SC_CREATED));
+        assertThat(responseMap.get(HttpStatus.SC_TOO_MANY_REQUESTS)).isEqualTo(LIMIT);
+        assertThat(responseMap.get(HttpStatus.SC_NO_CONTENT)).isEqualTo(LIMIT);
 
-        try (var response = client.target(BASE_RESOURCE_URI.formatted(baseURI))
-                .queryParam("project_name", projectName)
-                .queryParam("size", LIMIT * 2)
-                .request()
-                .accept(MediaType.APPLICATION_JSON_TYPE)
-                .header(HttpHeaders.AUTHORIZATION, apiKey)
-                .header(WORKSPACE_HEADER, workspaceName)
-                .get()) {
+        // Verify that traces created are equal to the limit
+        TracePage page = traceResourceClient.getTraces(projectName, null, apiKey, workspaceName,
+                List.of(), List.of(), (int) (LIMIT * 2), Map.of());
 
-            // Verify that traces created are equal to the limit
-            assertEquals(HttpStatus.SC_OK, response.getStatus());
-            TracePage page = response.readEntity(TracePage.class);
-
-            assertEquals(LIMIT, page.content().size());
-            assertEquals(LIMIT, page.total());
-            assertEquals(LIMIT, page.size());
-        }
+        assertThat(page.content().size()).isEqualTo(LIMIT);
+        assertThat(page.total()).isEqualTo(LIMIT);
+        assertThat(page.size()).isEqualTo(LIMIT);
 
     }
 
@@ -238,32 +257,22 @@ class RateLimitE2ETest {
 
         String projectName = UUID.randomUUID().toString();
 
-        Map<Integer, Long> responseMap = triggerCallsWithApiKey(LIMIT, projectName, apiKey, workspaceName);
+        Map<Integer, Long> responseMap = triggerBatchCallsWithApiKey(LIMIT, projectName, apiKey, workspaceName);
 
-        assertEquals(LIMIT, responseMap.get(HttpStatus.SC_CREATED));
+        assertThat(responseMap.get(HttpStatus.SC_NO_CONTENT)).isEqualTo(LIMIT);
 
         SingleDelay.timer(LIMIT_DURATION_IN_SECONDS, TimeUnit.SECONDS).blockingGet();
 
-        responseMap = triggerCallsWithApiKey(LIMIT, projectName, apiKey, workspaceName);
+        responseMap = triggerBatchCallsWithApiKey(LIMIT, projectName, apiKey, workspaceName);
 
-        assertEquals(LIMIT, responseMap.get(HttpStatus.SC_CREATED));
+        assertThat(responseMap.get(HttpStatus.SC_NO_CONTENT)).isEqualTo(LIMIT);
 
-        try (var response = client.target(BASE_RESOURCE_URI.formatted(baseURI))
-                .queryParam("project_name", projectName)
-                .queryParam("size", LIMIT * 2)
-                .request()
-                .accept(MediaType.APPLICATION_JSON_TYPE)
-                .header(HttpHeaders.AUTHORIZATION, apiKey)
-                .header(WORKSPACE_HEADER, workspaceName)
-                .get()) {
+        TracePage page = traceResourceClient.getTraces(projectName, null, apiKey, workspaceName,
+                List.of(), List.of(), (int) (LIMIT * 2), Map.of());
 
-            assertEquals(HttpStatus.SC_OK, response.getStatus());
-            TracePage page = response.readEntity(TracePage.class);
-
-            assertEquals(LIMIT * 2, page.content().size());
-            assertEquals(LIMIT * 2, page.total());
-            assertEquals(LIMIT * 2, page.size());
-        }
+        assertThat(page.content().size()).isEqualTo(LIMIT * 2);
+        assertThat(page.total()).isEqualTo(LIMIT * 2);
+        assertThat(page.size()).isEqualTo(LIMIT * 2);
 
     }
 
@@ -280,10 +289,11 @@ class RateLimitE2ETest {
 
         String projectName = UUID.randomUUID().toString();
 
-        Map<Integer, Long> responseMap = triggerCallsWithCookie(LIMIT * 2, projectName, sessionToken, workspaceName);
+        Map<Integer, Long> responseMap = triggerBatchCallsWithCookie(LIMIT * 2, projectName, sessionToken,
+                workspaceName);
 
-        assertEquals(LIMIT, responseMap.get(HttpStatus.SC_TOO_MANY_REQUESTS));
-        assertEquals(LIMIT, responseMap.get(HttpStatus.SC_CREATED));
+        assertThat(responseMap.get(HttpStatus.SC_TOO_MANY_REQUESTS)).isEqualTo(LIMIT);
+        assertThat(responseMap.get(HttpStatus.SC_NO_CONTENT)).isEqualTo(LIMIT);
 
         try (var response = client.target(BASE_RESOURCE_URI.formatted(baseURI))
                 .queryParam("project_name", projectName)
@@ -294,12 +304,12 @@ class RateLimitE2ETest {
                 .header(WORKSPACE_HEADER, workspaceName)
                 .get()) {
 
-            assertEquals(HttpStatus.SC_OK, response.getStatus());
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_OK);
             TracePage page = response.readEntity(TracePage.class);
 
-            assertEquals(LIMIT, page.content().size());
-            assertEquals(LIMIT, page.total());
-            assertEquals(LIMIT, page.size());
+            assertThat(page.content().size()).isEqualTo(LIMIT);
+            assertThat(page.total()).isEqualTo(LIMIT);
+            assertThat(page.size()).isEqualTo(LIMIT);
         }
 
     }
@@ -317,15 +327,15 @@ class RateLimitE2ETest {
 
         String projectName = UUID.randomUUID().toString();
 
-        Map<Integer, Long> responseMap = triggerCallsWithCookie(LIMIT, projectName, sessionToken, workspaceName);
+        Map<Integer, Long> responseMap = triggerBatchCallsWithCookie(LIMIT, projectName, sessionToken, workspaceName);
 
-        assertEquals(LIMIT, responseMap.get(HttpStatus.SC_CREATED));
+        assertThat(responseMap.get(HttpStatus.SC_NO_CONTENT)).isEqualTo(LIMIT);
 
         SingleDelay.timer(LIMIT_DURATION_IN_SECONDS, TimeUnit.SECONDS).blockingGet();
 
-        responseMap = triggerCallsWithCookie(LIMIT, projectName, sessionToken, workspaceName);
+        responseMap = triggerBatchCallsWithCookie(LIMIT, projectName, sessionToken, workspaceName);
 
-        assertEquals(LIMIT, responseMap.get(HttpStatus.SC_CREATED));
+        assertThat(responseMap.get(HttpStatus.SC_NO_CONTENT)).isEqualTo(LIMIT);
 
         try (var response = client.target(BASE_RESOURCE_URI.formatted(baseURI))
                 .queryParam("project_name", projectName)
@@ -337,12 +347,12 @@ class RateLimitE2ETest {
                 .get()) {
 
             // Verify that traces created are equal to the limit
-            assertEquals(HttpStatus.SC_OK, response.getStatus());
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_OK);
             TracePage page = response.readEntity(TracePage.class);
 
-            assertEquals(LIMIT * 2, page.content().size());
-            assertEquals(LIMIT * 2, page.total());
-            assertEquals(LIMIT * 2, page.size());
+            assertThat(page.content().size()).isEqualTo(LIMIT * 2);
+            assertThat(page.total()).isEqualTo(LIMIT * 2);
+            assertThat(page.size()).isEqualTo(LIMIT * 2);
         }
 
     }
@@ -361,9 +371,15 @@ class RateLimitE2ETest {
 
         String projectName = UUID.randomUUID().toString();
 
-        Map<Integer, Long> responseMap = triggerCallsWithApiKey(1, projectName, apiKey, workspaceName);
+        // Use batch endpoint to consume 1 permit from the general rate limit
+        List<Trace> initialTrace = List.of(factory.manufacturePojo(Trace.class).toBuilder()
+                .projectName(projectName)
+                .projectId(null)
+                .build());
 
-        assertEquals(1, responseMap.get(HttpStatus.SC_CREATED));
+        try (var response = traceResourceClient.callBatchCreateTraces(initialTrace, apiKey, workspaceName)) {
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_NO_CONTENT);
+        }
 
         List<Trace> traces = IntStream.range(0, (int) LIMIT)
                 .mapToObj(i -> factory.manufacturePojo(Trace.class).toBuilder()
@@ -372,22 +388,9 @@ class RateLimitE2ETest {
                         .build())
                 .toList();
 
-        try (var response = client.target(BASE_RESOURCE_URI.formatted(baseURI))
-                .path("batch")
-                .request()
-                .accept(MediaType.APPLICATION_JSON_TYPE)
-                .header(HttpHeaders.AUTHORIZATION, apiKey)
-                .header(WORKSPACE_HEADER, workspaceName)
-                .post(Entity.json(new TraceBatch(traces)))) {
-
-            assertEquals(HttpStatus.SC_TOO_MANY_REQUESTS, response.getStatus());
-            var error = response.readEntity(ErrorMessage.class);
-            assertEquals(getUserLimitErrorMessage(opikConfiguration), error.getMessage());
+        try (var response = traceResourceClient.callBatchCreateTraces(traces, apiKey, workspaceName)) {
+            assertLimitExceeded(response, opikConfiguration.getRateLimit().getGeneralLimit());
         }
-    }
-
-    private String getUserLimitErrorMessage(OpikConfiguration opikConfiguration) {
-        return getLimitErrorMessage(opikConfiguration.getRateLimit().getGeneralLimit().errorMessage());
     }
 
     private String getLimitErrorMessage(String errorMessage) {
@@ -410,12 +413,13 @@ class RateLimitE2ETest {
         mockTargetWorkspace(apiKey, workspaceName, workspaceId, user);
         mockTargetWorkspace(apiKey, workspaceName2, workspaceId2, user);
 
-        var trace = factory.manufacturePojo(Trace.class).toBuilder()
+        // Use a batch operation to consume 1 permit from the general rate limit
+        var initialTrace = factory.manufacturePojo(Trace.class).toBuilder()
                 .feedbackScores(null)
                 .comments(null)
                 .build();
 
-        traceResourceClient.createTrace(trace, apiKey, workspaceName);
+        traceResourceClient.batchCreateTraces(List.of(initialTrace), apiKey, workspaceName);
 
         List<Trace> traces = IntStream.range(0, (int) LIMIT)
                 .mapToObj(i -> factory.manufacturePojo(Trace.class).toBuilder()
@@ -425,10 +429,7 @@ class RateLimitE2ETest {
                 .toList();
 
         try (var response = traceResourceClient.callBatchCreateTraces(traces, apiKey, workspaceName)) {
-            assertEquals(HttpStatus.SC_TOO_MANY_REQUESTS, response.getStatus());
-
-            var error = response.readEntity(ErrorMessage.class);
-            assertEquals(getUserLimitErrorMessage(configuration), error.getMessage());
+            assertLimitExceeded(response, configuration.getRateLimit().getGeneralLimit());
         }
 
         traceResourceClient.batchCreateTraces(traces.subList(0, (int) LIMIT - 1), apiKey, workspaceName2);
@@ -459,14 +460,12 @@ class RateLimitE2ETest {
 
         try (var response = request.method(method, Entity.json(batch))) {
 
-            assertEquals(HttpStatus.SC_NO_CONTENT, response.getStatus());
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_NO_CONTENT);
         }
 
         try (var response = request.method(method, Entity.json(batch2))) {
 
-            assertEquals(HttpStatus.SC_TOO_MANY_REQUESTS, response.getStatus());
-            var error = response.readEntity(ErrorMessage.class);
-            assertEquals(getUserLimitErrorMessage(configuration), error.getMessage());
+            assertLimitExceeded(response, configuration.getRateLimit().getGeneralLimit());
         }
     }
 
@@ -486,25 +485,52 @@ class RateLimitE2ETest {
         IntStream.range(0, (int) LIMIT + 1).forEach(i -> {
             Trace trace = factory.manufacturePojo(Trace.class).toBuilder()
                     .projectName(projectName)
+                    .feedbackScores(null)
+                    .comments(null)
                     .build();
 
-            try (var response = client.target(BASE_RESOURCE_URI.formatted(baseURI))
-                    .request()
-                    .accept(MediaType.APPLICATION_JSON_TYPE)
-                    .header(HttpHeaders.AUTHORIZATION, apiKey)
-                    .header(WORKSPACE_HEADER, workspaceName)
-                    .post(Entity.json(trace))) {
+            try (var response = traceResourceClient.callBatchCreateTraces(List.of(trace), apiKey, workspaceName)) {
 
                 if (i < LIMIT) {
-                    assertEquals(HttpStatus.SC_CREATED, response.getStatus());
+                    assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_NO_CONTENT);
 
                     assertLimitHeaders(response, LIMIT - i - 1, RateLimited.GENERAL_EVENTS,
                             (int) LIMIT_DURATION_IN_SECONDS, opikConfiguration.getRateLimit().getGeneralLimit());
                 } else {
-                    assertEquals(HttpStatus.SC_TOO_MANY_REQUESTS, response.getStatus());
+                    assertLimitExceeded(response, opikConfiguration.getRateLimit().getGeneralLimit());
                 }
             }
         });
+    }
+
+    private void assertLimitExceeded(Response response, @Valid LimitConfig limitConfig) {
+        assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_TOO_MANY_REQUESTS);
+        assertRateLimitResetHeader(response, limitConfig);
+        ErrorMessage errorMessage = response.readEntity(ErrorMessage.class);
+        assertThat(errorMessage.getMessage())
+                .isEqualTo(getLimitErrorMessage(limitConfig.errorMessage()));
+    }
+
+    private void assertRateLimitResetHeader(Response response, RateLimitConfig.LimitConfig limitConfig) {
+        assertThat(response.getHeaders().get(RequestContext.RATE_LIMIT_RESET))
+                .isNotNull()
+                .hasSize(1)
+                .first()
+                .isInstanceOf(String.class)
+                .asString()
+                .satisfies(value -> {
+                    long rateLimitResetValue = Long.parseLong(value);
+
+                    String limitInMillis = response.getHeaders()
+                            .get(RequestContext.LIMIT_REMAINING_TTL.formatted(limitConfig.headerName()))
+                            .getFirst()
+                            .toString();
+
+                    long expectedTTLInSec = Math.max(Duration.ofMillis(Long.parseLong(limitInMillis)).getSeconds(), 1);
+
+                    assertThat(rateLimitResetValue).isEqualTo(expectedTTLInSec);
+                });
+
     }
 
     @Test
@@ -528,24 +554,22 @@ class RateLimitE2ETest {
         IntStream.range(0, (int) WORKSPACE_LIMIT + 1).forEach(i -> {
             Trace trace = factory.manufacturePojo(Trace.class).toBuilder()
                     .projectName(projectName)
+                    .feedbackScores(null)
+                    .comments(null)
                     .build();
 
             var currentApiKey = i % 2 == 0 ? apiKey : apiKey2;
 
-            try (var response = client.target(BASE_RESOURCE_URI.formatted(baseURI))
-                    .request()
-                    .accept(MediaType.APPLICATION_JSON_TYPE)
-                    .header(HttpHeaders.AUTHORIZATION, currentApiKey)
-                    .header(WORKSPACE_HEADER, workspaceName)
-                    .post(Entity.json(trace))) {
+            try (var response = traceResourceClient.callBatchCreateTraces(List.of(trace), currentApiKey,
+                    workspaceName)) {
 
                 if (i < WORKSPACE_LIMIT) {
-                    assertEquals(HttpStatus.SC_CREATED, response.getStatus());
+                    assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_NO_CONTENT);
 
                     assertLimitHeaders(response, WORKSPACE_LIMIT - i - 1, RateLimited.WORKSPACE_EVENTS,
                             (int) LIMIT_DURATION_IN_SECONDS, opikConfiguration.getRateLimit().getWorkspaceLimit());
                 } else {
-                    assertEquals(HttpStatus.SC_TOO_MANY_REQUESTS, response.getStatus());
+                    assertLimitExceeded(response, opikConfiguration.getRateLimit().getWorkspaceLimit());
                 }
             }
         });
@@ -571,22 +595,22 @@ class RateLimitE2ETest {
                 .toList();
 
         var datasetItems = IntStream.range(0, (int) LIMIT)
-                .mapToObj(i -> factory.manufacturePojo(DatasetItem.class).toBuilder()
+                .mapToObj(i -> DatasetResourceClient.buildDatasetItem(factory).toBuilder()
                         .experimentItems(null)
                         .build())
                 .toList();
 
-        var tracesFeedbackScores = IntStream.range(0, (int) LIMIT)
+        List<FeedbackScoreBatchItem> tracesFeedbackScores = IntStream.range(0, (int) LIMIT)
                 .mapToObj(i -> factory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
                         .projectId(null)
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
-        var spansFeedbackScores = IntStream.range(0, (int) LIMIT)
+        List<FeedbackScoreBatchItem> spansFeedbackScores = IntStream.range(0, (int) LIMIT)
                 .mapToObj(i -> factory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
                         .projectId(null)
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
         var experimentItems = IntStream.range(0, (int) LIMIT)
                 .mapToObj(i -> factory.manufacturePojo(ExperimentItem.class).toBuilder()
@@ -599,14 +623,16 @@ class RateLimitE2ETest {
                         BASE_RESOURCE_URI.formatted(baseURI) + "/batch", HttpMethod.POST),
                 Arguments.of(new SpanBatch(spans), new SpanBatch(List.of(spans.getFirst())),
                         "%s/v1/private/spans".formatted(baseURI) + "/batch", HttpMethod.POST),
-                Arguments.of(new DatasetItemBatch(projectName, null, datasetItems),
-                        new DatasetItemBatch(projectName, null, List.of(datasetItems.getFirst())),
+                Arguments.of(
+                        DatasetItemBatch.builder().datasetName(projectName).items(datasetItems).build(),
+                        DatasetItemBatch.builder().datasetName(projectName)
+                                .items(List.of(datasetItems.getFirst())).build(),
                         "%s/v1/private/datasets".formatted(baseURI) + "/items", HttpMethod.PUT),
-                Arguments.of(new FeedbackScoreBatch(tracesFeedbackScores),
-                        new FeedbackScoreBatch(List.of(tracesFeedbackScores.getFirst())),
+                Arguments.of(FeedbackScoreBatch.builder().scores(tracesFeedbackScores).build(),
+                        FeedbackScoreBatch.builder().scores(List.of(tracesFeedbackScores.getFirst())).build(),
                         BASE_RESOURCE_URI.formatted(baseURI) + "/feedback-scores", HttpMethod.PUT),
-                Arguments.of(new FeedbackScoreBatch(spansFeedbackScores),
-                        new FeedbackScoreBatch(List.of(spansFeedbackScores.getFirst())),
+                Arguments.of(FeedbackScoreBatch.builder().scores(spansFeedbackScores).build(),
+                        FeedbackScoreBatch.builder().scores(List.of(spansFeedbackScores.getFirst())).build(),
                         "%s/v1/private/spans".formatted(baseURI) + "/feedback-scores", HttpMethod.PUT),
                 Arguments.of(new ExperimentItemsBatch(experimentItems),
                         new ExperimentItemsBatch(Set.of(experimentItems.stream().findFirst().orElseThrow())),
@@ -630,7 +656,7 @@ class RateLimitE2ETest {
                 .header(WORKSPACE_HEADER, workspaceName)
                 .post(Entity.json(""))) {
 
-            assertEquals(HttpStatus.SC_CREATED, response.getStatus());
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_CREATED);
 
             assertLimitHeaders(response, 0, CUSTOM_LIMIT, 1, customLimit);
         }
@@ -642,8 +668,7 @@ class RateLimitE2ETest {
                 .header(WORKSPACE_HEADER, workspaceName)
                 .post(Entity.json(""))) {
 
-            assertEquals(HttpStatus.SC_TOO_MANY_REQUESTS, response.getStatus());
-
+            assertLimitExceeded(response, customLimit);
             assertLimitHeaders(response, 0, CUSTOM_LIMIT, 1, customLimit);
         }
 
@@ -666,10 +691,40 @@ class RateLimitE2ETest {
                 .header(WORKSPACE_HEADER, workspaceName)
                 .post(Entity.json(""))) {
 
-            assertEquals(HttpStatus.SC_CREATED, response.getStatus());
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_CREATED);
 
             assertLimitHeaders(response, 1, CUSTOM_LIMIT, 1, customLimit);
         }
+    }
+
+    @Test
+    @DisplayName("Rate limit: When throttling per client IP on an unauthenticated endpoint, Then each source IP has its own bucket")
+    void rateLimit__whenThrottlingPerClientIp__thenEachSourceIpHasItsOwnBucket() {
+        String ipA = randomIp();
+        String ipB = randomIp();
+
+        // The first call from each source IP is allowed; the limit is 1 per IP
+        assertIpAllowed(ipA);
+        assertIpAllowed(ipB);
+
+        // A second call exhausts its own bucket and is throttled
+        try (var response = postIpRated(ipA)) {
+            assertLimitExceeded(response, ipRatedLimit);
+        }
+    }
+
+    private void assertIpAllowed(String clientIp) {
+        try (var response = postIpRated(clientIp)) {
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_CREATED);
+        }
+    }
+
+    private Response postIpRated(String clientIp) {
+        return client.target("%s/v1/public/ip-rated".formatted(baseURI))
+                .request()
+                .accept(MediaType.APPLICATION_JSON_TYPE)
+                .header(com.google.common.net.HttpHeaders.X_FORWARDED_FOR, clientIp)
+                .post(Entity.json(""));
     }
 
     @Test
@@ -684,12 +739,12 @@ class RateLimitE2ETest {
                 .availableEvents(apiKey, new LimitConfig(generalLimit, generalLimit, limit, 1, "general limit"))
                 .block();
 
-        assertEquals(limit, availableEvents);
+        assertThat(availableEvents).isEqualTo(limit);
     }
 
     @Test
     @DisplayName("Rate limit: When custom rate limit has placeholder, Then set and return limit")
-    void rateLimit__whenRateLimitHasPlaceholder__thenSetAndReturnLimit(RateLimitService rateLimitService) {
+    void rateLimit__whenRateLimitHasPlaceholder__thenSetAndReturnLimit() {
 
         String apiKey = UUID.randomUUID().toString();
         String user = UUID.randomUUID().toString();
@@ -711,10 +766,7 @@ class RateLimitE2ETest {
                         }
                     } else {
                         try (var response = spanResourceClient.callGetSpanIdApi(span.id(), workspaceName, apiKey)) {
-                            assertEquals(HttpStatus.SC_TOO_MANY_REQUESTS, response.getStatus());
-                            ErrorMessage errorMessage = response.readEntity(ErrorMessage.class);
-                            assertThat(errorMessage.getMessage())
-                                    .isEqualTo(getLimitErrorMessage(getSpanIdLimit.errorMessage()));
+                            assertLimitExceeded(response, getSpanIdLimit);
                         }
                     }
                 });
@@ -728,26 +780,21 @@ class RateLimitE2ETest {
         String remainingTtl = response
                 .getHeaderString(RequestContext.LIMIT_REMAINING_TTL.formatted(limitConfig.headerName()));
 
-        assertEquals(expected, Long.parseLong(remainingLimit));
-        assertEquals(limitBucket, userLimit);
+        assertThat(Long.parseLong(remainingLimit)).isEqualTo(expected);
+        assertThat(userLimit).isEqualTo(limitBucket);
         assertThat(Long.parseLong(remainingTtl)).isBetween(0L, Duration.ofSeconds(limitDuration).toMillis());
     }
 
-    private Map<Integer, Long> triggerCallsWithCookie(long limit, String projectName, String sessionToken,
+    private Map<Integer, Long> triggerBatchCallsWithCookie(long limit, String projectName, String sessionToken,
             String workspaceName) {
         return Flux.range(0, ((int) limit))
                 .flatMap(i -> {
                     Trace trace = factory.manufacturePojo(Trace.class).toBuilder()
                             .projectName(projectName)
+                            .projectId(null)
                             .build();
-
-                    try (var response = client.target(BASE_RESOURCE_URI.formatted(baseURI))
-                            .request()
-                            .accept(MediaType.APPLICATION_JSON_TYPE)
-                            .cookie(RequestContext.SESSION_COOKIE, sessionToken)
-                            .header(WORKSPACE_HEADER, workspaceName)
-                            .post(Entity.json(trace))) {
-
+                    try (var response = traceResourceClient.callBatchCreateTracesWithCookie(List.of(trace),
+                            sessionToken, workspaceName)) {
                         return Flux.just(response);
                     }
                 }, 5)
@@ -755,7 +802,41 @@ class RateLimitE2ETest {
                 .collect(groupingBy(Response::getStatus, counting()));
     }
 
-    private Map<Integer, Long> triggerCallsWithApiKey(long limit, String projectName, String apiKey,
+    private Map<Integer, Long> triggerBatchCallsWithApiKey(long limit, String projectName, String apiKey,
+            String workspaceName) {
+        return Flux.range(0, ((int) limit))
+                .flatMap(i -> {
+                    Trace trace = factory.manufacturePojo(Trace.class).toBuilder()
+                            .projectName(projectName)
+                            .projectId(null)
+                            .build();
+
+                    try (Response data = traceResourceClient.callBatchCreateTraces(List.of(trace), apiKey,
+                            workspaceName)) {
+                        return Flux.just(data);
+                    }
+                }, 5)
+                .toStream()
+                .collect(groupingBy(Response::getStatus, counting()));
+    }
+
+    private Map<Integer, Long> triggerCreateSpansCalls(long limit, String projectName, String apiKey,
+            String workspaceName) {
+        return Flux.range(0, ((int) limit))
+                .flatMap(i -> {
+                    Span span = factory.manufacturePojo(Span.class).toBuilder()
+                            .projectName(projectName)
+                            .build();
+
+                    try (Response data = spanResourceClient.callCreateSpan(span, apiKey, workspaceName)) {
+                        return Flux.just(data);
+                    }
+                }, 5)
+                .toStream()
+                .collect(groupingBy(Response::getStatus, counting()));
+    }
+
+    private Map<Integer, Long> triggerCreateTracesCalls(long limit, String projectName, String apiKey,
             String workspaceName) {
         return Flux.range(0, ((int) limit))
                 .flatMap(i -> {
@@ -769,6 +850,157 @@ class RateLimitE2ETest {
                 }, 5)
                 .toStream()
                 .collect(groupingBy(Response::getStatus, counting()));
+    }
+
+    @Test
+    @DisplayName("Rate limit: When singleTracingOps limit is exceeded on createSpans, Then block remaining calls")
+    void rateLimit__whenSingleTracingOpsLimitIsExceededOnCreateSpans__shouldBlockRemainingCalls() {
+        String apiKey = UUID.randomUUID().toString();
+        String user = UUID.randomUUID().toString();
+        String workspaceId = UUID.randomUUID().toString();
+        String workspaceName = UUID.randomUUID().toString();
+
+        mockTargetWorkspace(apiKey, workspaceName, workspaceId, user);
+
+        String projectName = UUID.randomUUID().toString();
+
+        Map<Integer, Long> responseMap = triggerCreateSpansCalls(SINGLE_TRACING_OPS_LIMIT_VALUE * 2, projectName,
+                apiKey, workspaceName);
+
+        assertThat(responseMap.get(HttpStatus.SC_TOO_MANY_REQUESTS)).isEqualTo(SINGLE_TRACING_OPS_LIMIT_VALUE);
+        assertThat(responseMap.get(HttpStatus.SC_CREATED)).isEqualTo(SINGLE_TRACING_OPS_LIMIT_VALUE);
+    }
+
+    @Test
+    @DisplayName("Rate limit: When singleTracingOps limit is exceeded on createTraces, Then block remaining calls")
+    void rateLimit__whenSingleTracingOpsLimitIsExceededOnCreateTraces__shouldBlockRemainingCalls() {
+        String apiKey = UUID.randomUUID().toString();
+        String user = UUID.randomUUID().toString();
+        String workspaceId = UUID.randomUUID().toString();
+        String workspaceName = UUID.randomUUID().toString();
+
+        mockTargetWorkspace(apiKey, workspaceName, workspaceId, user);
+
+        String projectName = UUID.randomUUID().toString();
+
+        Map<Integer, Long> responseMap = triggerCreateTracesCalls(SINGLE_TRACING_OPS_LIMIT_VALUE * 2, projectName,
+                apiKey, workspaceName);
+
+        assertThat(responseMap.get(HttpStatus.SC_TOO_MANY_REQUESTS)).isEqualTo(SINGLE_TRACING_OPS_LIMIT_VALUE);
+        assertThat(responseMap.get(HttpStatus.SC_CREATED)).isEqualTo(SINGLE_TRACING_OPS_LIMIT_VALUE);
+    }
+
+    @Test
+    @DisplayName("Rate limit: When singleTracingOps rate limit is applied, Then it doesn't affect workspace limits")
+    void rateLimit__whenSingleTracingOpsRateLimitIsApplied__thenItDoesNotAffectWorkspaceLimits() {
+        String apiKey = UUID.randomUUID().toString();
+        String user = UUID.randomUUID().toString();
+        String workspaceId = UUID.randomUUID().toString();
+        String workspaceName = UUID.randomUUID().toString();
+
+        mockTargetWorkspace(apiKey, workspaceName, workspaceId, user);
+
+        String projectName = UUID.randomUUID().toString();
+
+        // Exhaust singleTracingOps limit with createSpans
+        triggerCreateSpansCalls(SINGLE_TRACING_OPS_LIMIT_VALUE, projectName, apiKey, workspaceName);
+
+        // Verify that batch trace creation (which uses workspace limit) still works
+        Trace trace = factory.manufacturePojo(Trace.class).toBuilder()
+                .projectName(projectName)
+                .feedbackScores(null)
+                .comments(null)
+                .build();
+
+        try (var response = traceResourceClient.callBatchCreateTraces(List.of(trace), apiKey, workspaceName)) {
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_NO_CONTENT);
+        }
+    }
+
+    @Test
+    @DisplayName("Rate limit: When updateSpan is called and singleTracingOps limit is exceeded, Then block remaining calls")
+    void rateLimit__whenUpdateSpanCalledAndSingleTracingOpsLimitExceeded__shouldBlockRemainingCalls() {
+        String apiKey = UUID.randomUUID().toString();
+        String user = UUID.randomUUID().toString();
+        String workspaceId = UUID.randomUUID().toString();
+        String workspaceName = UUID.randomUUID().toString();
+
+        mockTargetWorkspace(apiKey, workspaceName, workspaceId, user);
+
+        String projectName = UUID.randomUUID().toString();
+
+        // First create a span to update
+        Span span = factory.manufacturePojo(Span.class).toBuilder()
+                .projectName(projectName)
+                .build();
+        spanResourceClient.createSpan(span, apiKey, workspaceName);
+
+        // Create a simple span update with required fields from original span
+        SpanUpdate fullUpdate = factory.manufacturePojo(SpanUpdate.class);
+        SpanUpdate spanUpdate = SpanUpdate.builder()
+                .traceId(span.traceId()) // Required field - use original span's traceId
+                .projectName(span.projectName()) // Required field - use original span's project
+                .parentSpanId(span.parentSpanId()) // Required field - use original span's parentSpanId
+                .name(fullUpdate.name())
+                .endTime(fullUpdate.endTime())
+                .build();
+
+        // Test rate limiting on span updates by making direct HTTP calls
+        // Note: span creation already consumed 1 slot, so only 2 updates can succeed
+        Map<Integer, Long> responseMap = Flux.range(0, (int) SINGLE_TRACING_OPS_LIMIT_VALUE * 2)
+                .flatMap(i -> {
+                    try (Response data = spanResourceClient.callUpdateSpan(span.id(), spanUpdate, apiKey,
+                            workspaceName)) {
+                        return Flux.just(data);
+                    }
+                }, 5)
+                .toStream()
+                .collect(groupingBy(Response::getStatus, counting()));
+
+        assertThat(responseMap.get(HttpStatus.SC_TOO_MANY_REQUESTS)).isEqualTo(SINGLE_TRACING_OPS_LIMIT_VALUE + 1); // 4 failures
+        assertThat(responseMap.get(HttpStatus.SC_NO_CONTENT)).isEqualTo(SINGLE_TRACING_OPS_LIMIT_VALUE - 1); // 2 successes
+    }
+
+    @Test
+    @DisplayName("Rate limit: When updateTrace is called and singleTracingOps limit is exceeded, Then block remaining calls")
+    void rateLimit__whenUpdateTraceCalledAndSingleTracingOpsLimitExceeded__shouldBlockRemainingCalls() {
+        String apiKey = UUID.randomUUID().toString();
+        String user = UUID.randomUUID().toString();
+        String workspaceId = UUID.randomUUID().toString();
+        String workspaceName = UUID.randomUUID().toString();
+
+        mockTargetWorkspace(apiKey, workspaceName, workspaceId, user);
+
+        String projectName = UUID.randomUUID().toString();
+
+        // First create a trace to update
+        Trace trace = factory.manufacturePojo(Trace.class).toBuilder()
+                .projectName(projectName)
+                .build();
+        traceResourceClient.createTrace(trace, apiKey, workspaceName);
+
+        // Create a simple trace update with required fields from original trace
+        TraceUpdate fullUpdate = factory.manufacturePojo(TraceUpdate.class);
+        TraceUpdate traceUpdate = TraceUpdate.builder()
+                .projectName(trace.projectName()) // Required field - use original trace's project
+                .name(fullUpdate.name())
+                .endTime(fullUpdate.endTime())
+                .build();
+
+        // Test rate limiting on trace updates by making direct HTTP calls
+        // Note: trace creation already consumed 1 slot, so only 2 updates can succeed
+        Map<Integer, Long> responseMap = Flux.range(0, (int) SINGLE_TRACING_OPS_LIMIT_VALUE * 2)
+                .flatMap(i -> {
+                    try (Response data = traceResourceClient.callUpdateTrace(trace.id(), traceUpdate, apiKey,
+                            workspaceName)) {
+                        return Flux.just(data);
+                    }
+                }, 5)
+                .toStream()
+                .collect(groupingBy(Response::getStatus, counting()));
+
+        assertThat(responseMap.get(HttpStatus.SC_TOO_MANY_REQUESTS)).isEqualTo(SINGLE_TRACING_OPS_LIMIT_VALUE + 1); // 4 failures
+        assertThat(responseMap.get(HttpStatus.SC_NO_CONTENT)).isEqualTo(SINGLE_TRACING_OPS_LIMIT_VALUE - 1); // 2 successes
     }
 
 }
